--- a/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/client.fxml
+++ b/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/client.fxml
@@ -1,56 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<?import javafx.scene.layout.GridPane?>
-<VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="ru.shemplo.fitness.administration.gfx.ClientController"
-      alignment="TOP_CENTER" spacing="25" style="-fx-background-color: red;">
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<StackPane xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="ru.shemplo.fitness.administration.gfx.ClientController"
+           style="-fx-background-color: red;">
     <padding>
-        <Insets bottom="10" left="10" right="10" top="10" />
+        <Insets bottom="10" left="10" right="10" top="10"/>
     </padding>
 
-    <HBox alignment="CENTER_RIGHT">
-        <Button text="save" />
-    </HBox>
+    <!--<HBox style="-fx-background-color: blue;"><Label>Test</Label></HBox>-->
 
-    <HBox>
-        <VBox spacing="10" HBox.hgrow="ALWAYS">
-            <Label text="Personal information:" />
+    <VBox maxHeight="1000" maxWidth="1000">
+        <HBox alignment="CENTER_RIGHT">
+            <Button text="save"/>
+        </HBox>
 
-            <GridPane hgap="15" vgap="10" HBox.hgrow="ALWAYS">
+        <VBox spacing="10">
+            <Label text="Personal information:"/>
+
+            <GridPane hgap="15" vgap="10">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                </columnConstraints>
+
                 <!-- 1 row -->
                 <HBox alignment="CENTER_RIGHT" spacing="5"
                       GridPane.columnIndex="0"
                       GridPane.rowIndex="0">
-                    <Label text="Name:" />
-                    <TextField />
+                    <Label text="Name:"/>
+                    <TextField/>
                 </HBox>
 
                 <HBox alignment="CENTER_RIGHT" spacing="5"
                       GridPane.columnIndex="1"
                       GridPane.rowIndex="0">
-                    <Label text="Last name:" />
-                    <TextField />
+                    <Label text="Last name:"/>
+                    <TextField/>
                 </HBox>
 
                 <HBox alignment="CENTER_RIGHT" spacing="5"
                       GridPane.columnIndex="2"
                       GridPane.rowIndex="0">
-                    <Label text="Second name:" />
-                    <TextField />
+                    <Label text="Second name:"/>
+                    <TextField/>
                 </HBox>
 
                 <!-- 2 row -->
@@ -58,90 +55,90 @@
                       GridPane.columnIndex="0"
                       GridPane.columnSpan="1"
                       GridPane.rowIndex="1">
-                    <Label text="Sex:" />
-                    <RadioButton text="female" />
-                    <RadioButton text="male" />
+                    <Label text="Sex:"/>
+                    <RadioButton text="female"/>
+                    <RadioButton text="male"/>
                 </HBox>
 
                 <HBox alignment="CENTER_RIGHT" spacing="5"
                       GridPane.columnIndex="1"
                       GridPane.rowIndex="1">
-                    <Label text="Birthday:" />
-                    <DatePicker />
+                    <Label text="Birthday:"/>
+                    <DatePicker/>
                 </HBox>
                 <HBox alignment="CENTER_RIGHT" spacing="5"
                       GridPane.columnIndex="2"
                       GridPane.rowIndex="1">
-                    <Label text="Language:" />
-                    <ChoiceBox />
+                    <Label text="Language:"/>
+                    <ChoiceBox/>
                 </HBox>
             </GridPane>
         </VBox>
-    </HBox>
 
-    <VBox spacing="10">
-        <Label text="Contacts information:" />
+        <VBox spacing="10">
+            <Label text="Contacts information:"/>
 
-        <GridPane hgap="15" vgap="10">
-            <!-- 1 row -->
-            <HBox alignment="CENTER_RIGHT" spacing="5"
-                  GridPane.columnIndex="0"
-                  GridPane.rowIndex="0">
-                <Label text="Phone:" />
-                <TextField />
-            </HBox>
+            <GridPane hgap="15" vgap="10">
+                <!-- 1 row -->
+                <HBox alignment="CENTER_RIGHT" spacing="5"
+                      GridPane.columnIndex="0"
+                      GridPane.rowIndex="0">
+                    <Label text="Phone:"/>
+                    <TextField/>
+                </HBox>
 
-            <HBox alignment="CENTER_RIGHT" spacing="5"
-                  GridPane.columnIndex="1"
-                  GridPane.rowIndex="0">
-                <Label text="Reserve phone:" />
-                <TextField />
-            </HBox>
+                <HBox alignment="CENTER_RIGHT" spacing="5"
+                      GridPane.columnIndex="1"
+                      GridPane.rowIndex="0">
+                    <Label text="Reserve phone:"/>
+                    <TextField/>
+                </HBox>
 
-            <HBox alignment="CENTER_RIGHT" spacing="5"
-                  GridPane.columnIndex="2"
-                  GridPane.rowIndex="0">
-                <Label text="E-mail:" />
-                <TextField />
-            </HBox>
-        </GridPane>
+                <HBox alignment="CENTER_RIGHT" spacing="5"
+                      GridPane.columnIndex="2"
+                      GridPane.rowIndex="0">
+                    <Label text="E-mail:"/>
+                    <TextField/>
+                </HBox>
+            </GridPane>
+        </VBox>
+
+        <HBox spacing="20">
+            <VBox spacing="10">
+                <Label text="Season tickets:"/>
+
+                <ListView VBox.vgrow="ALWAYS"/>
+            </VBox>
+
+            <VBox spacing="10">
+                <Label text="Visit statistics:"/>
+
+                <VBox>
+                    <Label text="Visit frequency:"/>
+
+                    <LineChart maxHeight="50">
+                        <xAxis>
+                            <CategoryAxis side="BOTTOM"/>
+                        </xAxis>
+                        <yAxis>
+                            <CategoryAxis side="LEFT"/>
+                        </yAxis>
+                    </LineChart>
+                </VBox>
+
+                <VBox maxHeight="50">
+                    <Label text="Visit duration:"/>
+
+                    <LineChart>
+                        <xAxis>
+                            <CategoryAxis side="BOTTOM"/>
+                        </xAxis>
+                        <yAxis>
+                            <CategoryAxis side="LEFT"/>
+                        </yAxis>
+                    </LineChart>
+                </VBox>
+            </VBox>
+        </HBox>
     </VBox>
-
-    <HBox spacing="20">
-        <VBox spacing="10">
-            <Label text="Season tickets:" />
-
-            <ListView VBox.vgrow="ALWAYS" />
-        </VBox>
-
-        <VBox spacing="10">
-            <Label text="Visit statistics:" />
-
-            <VBox>
-                <Label text="Visit frequency:" />
-
-                <LineChart maxHeight="50">
-                    <xAxis>
-                        <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                        <CategoryAxis side="LEFT" />
-                    </yAxis>
-                </LineChart>
-            </VBox>
-
-            <VBox maxHeight="50">
-                <Label text="Visit duration:" />
-
-                <LineChart>
-                    <xAxis>
-                        <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                        <CategoryAxis side="LEFT" />
-                    </yAxis>
-                </LineChart>
-            </VBox>
-        </VBox>
-    </HBox>
-</VBox>
+</StackPane>
