--- a/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/admin.fxml
+++ b/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/admin.fxml
@@ -26,7 +26,7 @@
                 <Pane HBox.hgrow="ALWAYS"/>
                 <Button text="add new"/>
             </HBox>
-            <ListView VBox.vgrow="ALWAYS" />
+            <ListView fx:id="clientsList" VBox.vgrow="ALWAYS" />
         </VBox>
         <Separator orientation="VERTICAL" />
 
