--- a/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/client.fxml
+++ b/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/client.fxml
@@ -21,8 +21,8 @@
     </padding>
 
     <HBox alignment="CENTER_LEFT" spacing="10">
-        <Button fx:id="saveClientDetails" text="save" />
-        <Button fx:id="" text="reset" />
+        <Button fx:id="saveClientDetails"  text="save" />
+        <Button fx:id="resetClientDetails" text="reset" />
     </HBox>
 
     <VBox alignment="TOP_CENTER">
@@ -134,12 +134,33 @@
 
             <VBox spacing="20">
                 <VBox spacing="10" VBox.vgrow="ALWAYS">
+                    <VBox fx:id="ticketDetails" spacing="10" disable="true">
+                        <HBox alignment="CENTER_LEFT" spacing="5">
+                            <Label text="Season ticket"/>
+                            <Separator HBox.hgrow="ALWAYS"/>
+                            <Button fx:id="saveTicketDetails"  text="save" />
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="5">
+                            <Label text="Name" minWidth="90"/>
+                            <TextField HBox.hgrow="ALWAYS"/>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="5">
+                            <Label text="Secret" minWidth="90"/>
+                            <TextField HBox.hgrow="ALWAYS"/>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="5">
+                            <Label text="Visits" minWidth="90"/>
+                            <TextField HBox.hgrow="ALWAYS"/>
+                        </HBox>
+                    </VBox>
+
+                    <Separator HBox.hgrow="ALWAYS"/>
                     <HBox alignment="CENTER_LEFT">
                         <Label text="List of Season Tickets:"/>
                         <Pane HBox.hgrow="ALWAYS"/>
                         <Button text="add new"/>
                     </HBox>
-                    <ListView VBox.vgrow="ALWAYS" />
+                    <ListView fx:id="ticketsList" VBox.vgrow="ALWAYS" />
                 </VBox>
             </VBox>
         </HBox>
