--- a/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/admin.fxml
+++ b/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/admin.fxml
@@ -9,10 +9,11 @@
 
     <!-- Left column with list of clients -->
     <VBox styleClass="column" minWidth="300" HBox.hgrow="SOMETIMES">
-        <HBox alignment="CENTER_LEFT" VBox.vgrow="NEVER">
+        <HBox spacing="5" alignment="CENTER_LEFT" VBox.vgrow="NEVER">
             <Label>List of clients:</Label>
             <Region HBox.hgrow="ALWAYS"/>
             <Button fx:id="addClient" text="Add client"/>
+            <Button fx:id="openStatistics" text="See statistics"/>
         </HBox>
         <ListView fx:id="clientsList" VBox.vgrow="ALWAYS"/>
     </VBox>
@@ -21,9 +22,8 @@
 
     <!-- Right column with Season Ticket data -->
     <VBox styleClass="column" minWidth="500" HBox.hgrow="ALWAYS">
-        <ScrollPane fx:id="clientDetails" pannable="true"
-                    fitToWidth="true" fitToHeight="true"
-                    hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
+        <ScrollPane fx:id="details" pannable="true" fitToWidth="true" 
+            fitToHeight="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
         </ScrollPane>
     </VBox>
 </HBox>
