Fix of display of new tickets + birthday and gender

--- a/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/client.fxml
+++ b/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/client.fxml
@@ -105,7 +105,7 @@
 
                         <Label text="Sex" minWidth="90" alignment="CENTER_RIGHT"/>
                         <HBox prefWidth="50" HBox.hgrow="ALWAYS">
-                            <ChoiceBox maxWidth="Infinity" HBox.hgrow="ALWAYS">
+                            <ChoiceBox fx:id="sexF" maxWidth="Infinity" HBox.hgrow="ALWAYS">
                                 <String fx:value="Male"/>
                                 <String fx:value="Female"/>
                             </ChoiceBox>
