--- a/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/statistics.fxml
+++ b/SD - 11. Fitness Events/fitness-administartion/src/main/resources/fxml/statistics.fxml
@@ -8,32 +8,35 @@
 
 <?import javafx.scene.layout.StackPane?>
 
+<?import ru.shemplo.fitness.administration.gfx.DateAxis?>
+<?import javafx.scene.chart.LineChart?>
+
 <StackPane xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="ru.shemplo.fitness.administration.gfx.StatisticsController">
     <VBox alignment="TOP_CENTER" spacing="20">
-        <BarChart fx:id="dayVisits" title="Visits per day">
+        <LineChart fx:id="dayVisits" title="Visits per day" animated="false" legendVisible="false">
             <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <DateAxis fx:id="dayVisitsX" autoRanging="false" side="BOTTOM" />
             </xAxis>
             <yAxis>
                 <NumberAxis side="LEFT" />
             </yAxis>
-        </BarChart>
-        <BarChart fx:id="monthVisits" title="Visits in the last 30 days">
+        </LineChart>
+        <LineChart fx:id="monthVisits" title="Visits in the last 30 days" animated="false" legendVisible="false">
             <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <DateAxis fx:id="monthVisitsX" autoRanging="false" side="BOTTOM" />
             </xAxis>
             <yAxis>
                 <NumberAxis side="LEFT" />
             </yAxis>
-        </BarChart>
-        <BarChart fx:id="averageVisits" title="Average visits in the last 30 days">
+        </LineChart>
+        <LineChart fx:id="averageVisits" title="Average visits in the last 30 days" animated="false" legendVisible="false">
             <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <DateAxis fx:id="averageVisitsX" autoRanging="false" side="BOTTOM" />
             </xAxis>
             <yAxis>
                 <NumberAxis side="LEFT" />
             </yAxis>
-        </BarChart>
+        </LineChart>
     </VBox>
 </StackPane>
